test/negative/feature_float.java

public class feature_float {
  public feature_float() {}
  protected float x;
}

